<resources>
    <string name="app_name">Commuterpedia</string>
    <string name="opening_krl">KRL Commuter Line merupakan bagian yang tidak terpisahkan dalam kehidupan warga Jakarta. Oleh karena itu saja sih armada KRL yang kita naiki setiap hari? \nLets check it out!</string>
    <string name="train_series">Train Type (EN)</string>
    <string name="train_kei">Train Type (JP)</string>
    <string name="train_description">Fleet Description</string>
    <string name="train_images">Fleet Image</string>
    <string name="train_image">Train Image</string>
    <string name="my_name">Ridho Mardhatillah</string>
    <string name="my_email">a181dsx1155@bangkit.academy</string>
    <string name="imagedesc">My Image</string>
    <string name="train_logo">Train Logo</string>
    <string-array name="fleet_type">
        <item>JR East 103 Series</item>
        <item>JR East 203 Series</item>
        <item>JR East 205 Series</item>
        <item>JR East E217 Series</item>
        <item>Toei 6000 Series</item>
        <item>Tokyu 8000 Series</item>
        <item>Tokyu 8500 Series</item>
        <item>Tokyo Metro 5000 Series</item>
        <item>Tokyo Metro 6000 Series</item>
        <item>Tokyo Metro 7000 Series</item>
        <item>Tokyo Metro 05 Series</item>
        <item>Toyo Rapid 1000 Series</item>
        /*<item>EA 202 Series</item>
        <item>EA 203 Series</item>
        <item>EA 101 Series</item>
        <item>EA 102 Series</item>
        <item>ED 101 Series</item>*/
    </string-array>
    <string-array name="fleet_type_jp">
        <item>JR東日本103系</item>
        <item>JR東日本203系</item>
        <item>JR東日本205系</item>
        <item>JR東日本E217系</item>
        <item>都営6000形</item>
        <item>東急8000系</item>
        <item>東急8500系</item>
        <item>東京メトロ5000系</item>
        <item>東京メトロ6000系</item>
        <item>東京メトロ7000系</item>
        <item>東京メトロ05系</item>
        <item>東葉高速1000形</item>
        <item>KRL KfW i9000</item>
        <item>KRL ARS Basoetta</item>
        <item>KRL Ekonomi BN-Holec</item>
        <item>KRL Ekonomi Hitachi</item>
        <item>KRL Ekonomi Rheostatik</item>
    </string-array>
</resources>